when adding a new task in todo project/template, auto-select the title field so copy paste of text is easy. add rightclick option in project view on a task "show depending", this should highlight the tasks dependants. remove all personal organisations (those whose org name matches the email of the user and stop the creation of these orgs, do not auto create these orgs, personal accounts do not need to have an org necessarily unless it is a problem for the website stack itself.
